manifests/tools-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tools-pod
spec:
  containers:
    - name: tools-container
      image: amsy810/tools:latest
